// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test in component  <GifGrid /> should have match with the snapshot 1`] = `
<Fragment>
  <h3>
    Twice
  </h3>
  <p>
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Test in component  <GifGrid /> should show img with useFetchGifs is loaded 1`] = `
<Fragment>
  <h3>
    Twice
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABB"
      key="ABB"
      title="cualquier cosa"
      url="https://localhostproeba/cosa.jpg"
    />
    <GifGridItem
      id="ABC"
      key="ABC"
      title="cualquier cosa"
      url="https://localhostproeba/cosa.jpg"
    />
  </div>
</Fragment>
`;
